[package]
name = "rsgamelaunch"
version = "0.1.0"
edition = "2018"

[dependencies]
argon2 = "0.3"
rusqlite = { version = "0.25", features = ["bundled"], default-features = false }
rand_core = { version = "0.6", features = ["getrandom"], default-features = false }
termion = "1.5"
termios = "0.3"
trim-in-place = "0.1"
nonblock = "0.1.0"
